--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       <div class="col">
         <div class="mb-3 mt-3">  
           <h2 class="mb-3" style="text-align: center;">
-            Lugnica CDN Upload Zone
+            Yuzu CDN Upload Zone
           </h2>
 
           <div id="alert" class="alert alert-primary mb-3" role="alert">
