--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     }
   </style>
 
-  <title>Yuzu CDN Upload</title>
+  <title>{{ site_name }}</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
       <div class="col">
         <div class="mb-3 mt-3">  
           <h2 class="mb-3" style="text-align: center;">
-            Yuzu CDN Upload Zone
+            {{ site_name }}
           </h2>
 
           <div id="alert" class="alert alert-primary mb-3" role="alert">
