--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="icon" type="image/png" href="https://1.bp.blogspot.com/-PMfBpfxkpWM/UrEiIRsRwkI/AAAAAAAAb7s/1lXA82iVxac/s0/fruit_yuzu.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet">  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
@@ -13,6 +14,13 @@
     }
     .container {
       margin-top: 30px;
+    }
+    #yuzu-fruit {
+      width: 150px;
+      height: auto;
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
     }
   </style>
 
@@ -68,6 +76,7 @@
       </div>
     </div>
   </div>
+  <img id="yuzu-fruit" src="https://1.bp.blogspot.com/-PMfBpfxkpWM/UrEiIRsRwkI/AAAAAAAAb7s/1lXA82iVxac/s0/fruit_yuzu.png" alt="Yuzu">
 
   <script>
     let progress = document.getElementById("progress");
