--- a/templates/index.html
+++ b/templates/index.html
@@ -83,19 +83,21 @@
   <img id="yuzu-fruit" src="https://1.bp.blogspot.com/-PMfBpfxkpWM/UrEiIRsRwkI/AAAAAAAAb7s/1lXA82iVxac/s0/fruit_yuzu.png" alt="Yuzu">
 
   <script>
-    let progress = document.getElementById("progress");
-    let progress_wrapper = document.getElementById("progress_wrapper");
-    let progress_status = document.getElementById("progress_status");
+    const $ = (s) => document.querySelector(s);
 
-    let upload_btn = document.getElementById("upload_btn");
-    let loading_btn = document.getElementById("loading_btn");
-    let cancel_btn = document.getElementById("cancel_btn");
+    let progress = $("#progress");
+    let progress_wrapper = $("#progress_wrapper");
+    let progress_status = $("#progress_status");
 
-    let alert_wrapper = document.getElementById("alert_wrapper");
+    let upload_btn = $("#upload_btn");
+    let loading_btn = $("#loading_btn");
+    let cancel_btn = $("#cancel_btn");
 
-    let input = document.getElementById("file_input");
-    let token_input = document.getElementById("token_input");
-    let expiration_input = document.getElementById("expiration_input");
+    let alert_wrapper = $("#alert_wrapper");
+
+    let input = $("#file_input");
+    let token_input = $("#token_input");
+    let expiration_input = $("#expiration_input");
 
     // Function to show alerts
     function show_alert(message, alert) {
@@ -111,20 +113,19 @@
     function upload(url) {
       if (!input.value) {
         show_alert("No file selected", "warning");
-
         return;
       }
-
-      let data = new FormData();
-      let request = new XMLHttpRequest();
-
-      request.responseType = "text";
+      
       alert_wrapper.innerHTML = "";
       input.disabled = true;
       upload_btn.classList.add("d-none");
       loading_btn.classList.remove("d-none");
       cancel_btn.classList.remove("d-none");
       progress_wrapper.classList.remove("d-none");
+
+      let data = new FormData();
+      let request = new XMLHttpRequest();
+      request.responseType = "text";
 
       let file = input.files[0];
       let filename = file.name;
@@ -135,7 +136,7 @@
       }
 
       // request progress handler
-      request.upload.addEventListener("progress", function (e) {
+      request.upload.addEventListener("progress", (e) => {
         let loaded = e.loaded;
         let total = e.total;
         let percent_complete = (loaded / total) * 100;
@@ -148,7 +149,7 @@
       });
 
       // request load handler (transfer complete)
-      request.addEventListener("load", function (e) {
+      request.addEventListener("load", (e) => {
         if (request.status == 200) {
           url = request.responseText;
           show_alert(
@@ -163,14 +164,14 @@
       });
 
       // request error handler
-      request.addEventListener("error", function (e) {
+      request.addEventListener("error", (e) => {
         reset();
 
         show_alert(`Error uploading file`, "warning");
       });
 
       // request abort handler
-      request.addEventListener("abort", function (e) {
+      request.addEventListener("abort", (e) => {
         reset();
 
         show_alert(`Upload cancelled`, "primary");
@@ -181,7 +182,7 @@
       request.setRequestHeader("Authorization", token_input.value);
       request.send(data);
 
-      cancel_btn.addEventListener("click", function () {
+      cancel_btn.addEventListener("click", () => {
         request.abort();
       });
     }
